objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Blackcard_Member__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <defaultValue>false</defaultValue>
        <description>This field is used for customers who have obtained Blackcard status. Treat with care!</description>
        <inlineHelpText>Blackcard status is a priority designation. This can designate the level of attention a customer will warrant.</inlineHelpText>
        <label>Blackcard Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Insert preferred client phone number here (mobile or landline).</description>
        <inlineHelpText>Use the following format: x + (xxx) xxx-xxxx</inlineHelpText>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Background__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Customer background information.</description>
        <inlineHelpText>Used for strategic marketing communication to prospects and existing customers.</inlineHelpText>
        <label>Customer Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Use to document the date of first contact.</description>
        <inlineHelpText>When did you first talk with this customer?</inlineHelpText>
        <label>First Contact</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer__c</fullName>
        <description>Enter name of customer here.</description>
        <label>Name of Customer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pager__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Client pager number.</description>
        <inlineHelpText>Obsolete contact method, do not use.</inlineHelpText>
        <label>Pager</label>
        <type>Phone</type>
    </fields>
</CustomObject>